# whycon-ros

./: CMakeLists.txt  LICENSE  README.md  package.xml  todo_notes.txt
cfg/: whycon.cfg
id/: CNecklace.cpp  Makefile  whycon_id_gen  whycon_id_gen.cpp
include/whycon/: CCircleDetect.h  CRawImage.h  CTimer.h  CTransformation.h  CWhycon.h  SStructDefs.h  whycon.h
include/whycon_ros/: whycon_ros_node.h
launch/: arena-calibration.yaml  turtle-exp.perspective  whycon-gui.launch  whycon-test.launch  whycon.launch
msg/: ProcessedImage.msg
src/old/: CCircleDetect_old.cpp  CCircleDetect_test.cpp  CGui.cpp  CGui.h
src/whycon/: CCircleDetect.cpp  CNecklace.cpp  CRawImage.cpp  CTransformation.cpp  CWhycon.cpp  sysmat.cpp
src/whycon_ros/: whycon_ros_node.cpp
srv/: SelectMarker.srv  SetCalibPath.srv  SetDrawing.srv
whycode-ros2/: CMakeLists.txt  package.xml
whycode-ros2-interfaces/: CMakeLists.txt  LICENSE  README.md  package.xml
whycode-ros2-interfaces/msg/: Marker.msg  MarkerArray.msg
whycode-ros2-interfaces/srv/: GetGuiSettings.srv  SelectMarker.srv  SetCalibMethod.srv  SetCalibPath.srv  SetCoords.srv  SetDrawing.srv
whycode-ros2/cfg/: whycon.cfg
whycode-ros2/include/whycon/: CNecklace.h  CTransformation.h  whycon.h
whycode-ros2/include/whycon_ros/: whycon_ros_node.h
whycode-ros2/launch/: whycode.launch  whycon.launch
whycode-ros2/msg/: Marker.msg  MarkerArray.msg
whycode-ros2/src/whycon/: CCircleDetect.cpp  CNecklace.cpp  CTimer.cpp  CTransformation.cpp
whycode-ros2/src/whycon_ros/: whycon_ros_node.cpp
whycode-ros2/srv/: GetGuiSettings.srv  SetCalibMethod.srv  SetCoords.srv
