<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>whycode</name>
  <version>0.0.1</version>
  <description>WhyCode localisation system</description>

  <maintainer email="ulricji1@fel.cvut.cz">Jiří Ulrich</maintainer>
  <author email="ulricji1@fel.cvut.cz">Jiří Ulrich</author>
  <author email="krajnt1@fel.cvut.cz">Tomáš Krajník</author>

  <license file="LICENSE">CUSTOM LICENSE FILE</license>

  <url>https://github.com/jiriUlr/whycon-ros</url>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>whycode_interfaces</depend>

  <depend>opencv</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <exec_depend>message_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
